--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bm92ZWwtb3NwcmV5LTg5LmNsZXJrLmFjY291bn
 CLERK_SECRET_KEY=sk_test_vuM4fmFbG8208aMf1dDYETY9MqUAcxCRApqw9XZFcd
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-SIGNING_SECRET=whsec_CVYSfF..
+SIGNING_SECRET=whsec_dQHlfuN5uK/5mlqP6nX5keMeRXypKB26
 MONGODB_URI=mongodb+srv://devcompulink:Stately95@cluster0.qsxtz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyB1Pb1..
 URL=http://localhost:3000
