--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 SIGNING_SECRET=whsec_dQHlfuN5uK/5mlqP6nX5keMeRXypKB26
 MONGODB_URI=mongodb+srv://devcompulink:Stately95@cluster0.qsxtz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyB1Pb1..
-URL=http://localhost:3000
+URL=https://next-estate-mauve.vercel.app/
