--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/react": "19.0.8",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
