--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ CLERK_SECRET_KEY=sk_test_vuM4fmFbG8208aMf1dDYETY9MqUAcxCRApqw9XZFcd
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 SIGNING_SECRET=whsec_dQHlfuN5uK/5mlqP6nX5keMeRXypKB26
-MONGODB_URI=mongodb+srv://devcompulink:Stately95@cluster0.qsxtz.mongodb.net/estate?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://devcompulink:Stately95@cluster0.qsxtz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyB1Pb1..
 URL=https://next-estate-mauve.vercel.app/
